--- a/data/projects.json
+++ b/data/projects.json
@@ -2,7 +2,7 @@
   "projects": [
     {
       "file": "QueryGenius.md",
-      "title": "Text-to-SQL",
+      "title": "Text-To-SQL",
       "tech_stack": ["Generative AI", "Python", "AWS Bedrock", "AWS Athena", "AWS S3"],
       "date": "2024-09-01",
       "end_date": "2025-06-01"
